assets/css/custom.css
/* ... */
  @media screen and (max-width: 719px) {
    .pageWrapper .two-col.col-narrow .column {
      padding: 0 0; }
    .pageWrapper .selector {
      margin-bottom: 20px; }
    .pageWrapper .unequalTwoColumn .content {
      flex-flow: column; }
    .pageWrapper .unequalTwoColumn .column {
      width: 100%;
      max-width: 100%; }
      .pageWrapper .unequalTwoColumn .column.smaller {
        padding: 0 0 63px 0; }
        .pageWrapper .unequalTwoColumn .column.smaller img {
          top: 0;
          width: 100%;
          max-width: 320px; }
    .pageWrapper .mb-54 {
      margin-bottom: 26px; }
    .pageWrapper .mt-140 {
      margin-top: 34px; }
    .pageWrapper .mt-125 {
      margin-top: 45px; }
    .pageWrapper .threeSixtyWidth {
      max-width: 360px; } }
  .pageWrapper .text-white * {
    color: white; }
  .pageWrapper .text-white .btn-outline {
    border: 1px solid #C4C4C4; }
  .pageWrapper .bg-white {
    background-color: white; }
  .pageWrapper .bg-blue {
    background-color: #06033A; }
  .pageWrapper .bg-grid {
    background: #FEECEC url(../images/grid-pattern.svg) repeat center top/cover;
    border-top: 1px solid #F22F46;
    border-bottom: 1px solid #F22F46; }
    .pageWrapper .bg-grid-overlap {
      display: block;
      position: absolute;
      background: #FCCFCF url(../images/grid-pattern-light.svg) repeat center top/cover;
      background-size: 1441px auto;
      border-top: 1px solid #F22F46;
      border-bottom: 1px solid transparent;
      bottom: 0;
      left: 0;
      width: 100%; }
    .pageWrapper .bg-grid.block-short-content {
      border-top: none; }
  .pageWrapper .row {
    display: flex;
    flex-wrap: wrap; }
    .pageWrapper .row.three-column .column {
      width: calc(33.3% - 1px); }
    .pageWrapper .row > .quarter {
      width: 25%; }
    .pageWrapper .row > .half {
      width: 50%; }
  .pageWrapper .flexcol {
    display: flex;
    flex-direction: column; }
  .pageWrapper .mt-auto {
    margin-top: auto; }
  .pageWrapper .social {
    display: inline-block;
    text-decoration: none;
    text-align: center;
    width: 90px;
    height: 90px;
    border: 1px solid #121C2D;
    border-radius: 50%;
    margin: 0 18px;
    transition: all 0.5s cubic-bezier(0.22, 1, 0.36, 1); }
    .pageWrapper .social:hover {
      border-color: #F22F46; }
    .pageWrapper .social img {
      width: auto;
      height: 30px;
      margin: 30px 0; }
  .pageWrapper .sharing {
    padding-top: 113px;
    padding-bottom: 157px;
    text-align: center; }
    .pageWrapper .sharing h2 {
      margin-top: 38px; }
    .pageWrapper .sharing + .eyebrow {
      margin: 0;
      padding-bottom: 42px; }
  @media screen and (max-width: 1439px) {
    .pageWrapper .sharing {
      padding-top: 66px;
      padding-bottom: 140px; } }
  @media screen and (max-width: 1199px) {
    .pageWrapper .sharing {
      padding-top: 54px;
      padding-bottom: 100px; } }
  @media screen and (max-width: 719px) {
    .pageWrapper .sharing {
      padding: 81px 40px 100px 40px; }
      .pageWrapper .sharing + .eyebrow {
        padding-bottom: 20px; } }
  .pageWrapper .dot-chart {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 320px; }
    .pageWrapper .dot-chart > div {
      width: 21px;
      height: 21px;
      border: 1px solid #F22F46;
      border-radius: 50%;
      margin: 5px;
      background-color: transparent;
      transition: all 0.5s cubic-bezier(0.22, 1, 0.36, 1); }
    .pageWrapper .dot-chart .filled {
      background-color: #F22F46; }
  .pageWrapper .chart-grid .chart-text {
    font-family: "Twilio Sans Mono", sans-serif;
    font-size: 60px;
    font-style: normal;
    font-weight: 400;
    line-height: 64px;
    letter-spacing: 0em;
    text-align: center; }
    .pageWrapper .chart-grid .chart-text span:before {
      content: '';
      display: block;
      background: url(../images/right-arrow.svg) no-repeat center;
      background-size: contain;
      width: 106px;
      height: 32px; }
  .pageWrapper .intro-data-chart, .pageWrapper .twilio-data-chart {
    padding-bottom: 0; }
    .pageWrapper .intro-data-chart + .chart-caption, .pageWrapper .twilio-data-chart + .chart-caption {
      margin: 33px 0; }
  .pageWrapper .intro-data-chart {
    min-height: 350px; }
    .pageWrapper .intro-data-chart .apexcharts-text.apexcharts-xaxis-label {
      padding-top: 2px; }
  .pageWrapper .twilio-data-chart {
    min-height: 320px; }
  .pageWrapper .apexcharts-legend {
    align-content: baseline; }
    .pageWrapper .apexcharts-legend-series {
      margin-top: 66px !important;
      margin-right: 30px !important; }
    .pageWrapper .apexcharts-legend-text {
      transform: translate(0, -5px);
      display: inline-block;
      padding-left: 7px; }
  .pageWrapper .chart-wrapper {
    border-bottom: 1px solid #F22F46; }
  .pageWrapper .intro-data-chart .apexcharts-legend, .pageWrapper .chart-wrapper .apexcharts-legend, .pageWrapper .stackedBarChart .apexcharts-legend {
    padding-left: 98px; }
    .pageWrapper .intro-data-chart .apexcharts-legend-series, .pageWrapper .chart-wrapper .apexcharts-legend-series, .pageWrapper .stackedBarChart .apexcharts-legend-series {
      margin-top: 20px !important; }
  .pageWrapper .stackedBarChart .apexcharts-legend {
    padding-left: 0; }
  .pageWrapper .chart-wrapper > div:first-child {
    margin: 54px auto 18px;
    min-height: 460px; }
    .pageWrapper .chart-wrapper > div:first-child .chart-placeholder {
      position: relative;
      top: 50%;
      left: 0;
      transform: translate(0, -50%); }
    .pageWrapper .chart-wrapper > div:first-child .apexcharts-series path.apexcharts-bar-area {
      stroke: #F22F46;
      stroke-width: 1px; }
  .pageWrapper .chart-placeholder:not(.chart-text) {
    min-height: 350px; }
  .pageWrapper .chart-placeholder, .pageWrapper .apexcharts-canvas {
    max-width: 100%;
    overflow: hidden; }
/* ... */

